[gd_scene load_steps=24 format=3 uid="uid://u3yqd7pwtigk"]

[ext_resource type="Texture2D" uid="uid://bx2q4hw8l31y1" path="res://Assets/Enemies/Dasher/dasher.png" id="1_8k6n1"]
[ext_resource type="Script" uid="uid://p2pqh22e62wl" path="res://Assets/Enemies/Dasher/baseEnemyScript.gd" id="1_g7xjr"]
[ext_resource type="FontFile" uid="uid://c0qwhv3dt8bkn" path="res://Assets/Fonts/EXEPixelPerfect.ttf" id="2_01qyd"]
[ext_resource type="Texture2D" uid="uid://gemf0qgv7hrx" path="res://Assets/Player/shadow.png" id="2_c2y2a"]
[ext_resource type="AnimationLibrary" uid="uid://bw8x68jbtcywt" path="res://Assets/Enemies/Dasher/dasherAnims.tres" id="3_4x4fv"]
[ext_resource type="Script" uid="uid://bu2s5012yf41t" path="res://Assets/Player/state_machine.gd" id="4_8jybf"]
[ext_resource type="PackedScene" uid="uid://bkwb6urvragkp" path="res://Assets/Components/ContextBasedSteering/context_based_steering.tscn" id="5_fmtxg"]
[ext_resource type="Script" uid="uid://5fou4ild13hv" path="res://Assets/Enemies/Dasher/enemy_idle.gd" id="5_g7xjr"]
[ext_resource type="PackedScene" uid="uid://buckxoikxks1g" path="res://Assets/Components/DamageComp/DamageComponent.tscn" id="5_ts40w"]
[ext_resource type="PackedScene" uid="uid://jhld54l5rdv2" path="res://Assets/Components/HealthBarComponent/health_bar_component.tscn" id="7_7a3s0"]
[ext_resource type="AnimationLibrary" uid="uid://p4axnkbbvouj" path="res://Assets/Enemies/Dasher/enemyFxAnims.tres" id="7_ps5yx"]
[ext_resource type="Script" uid="uid://bt0ty402aum81" path="res://Assets/Enemies/Dasher/enemy_chase.gd" id="8_lwrc5"]
[ext_resource type="Script" uid="uid://8csbqgta5dlc" path="res://Assets/Enemies/Dasher/enemy_hurt.gd" id="10_6clr8"]
[ext_resource type="Script" uid="uid://cdqu5qpjkpa2o" path="res://Assets/Enemies/Dasher/enemy_dead.gd" id="14_6nf26"]
[ext_resource type="Script" uid="uid://byv5ewh1b80uo" path="res://Assets/Enemies/Dasher/enemy_hold.gd" id="15_aries"]

[sub_resource type="Shader" id="Shader_ts40w"]
code = "shader_type spatial;
render_mode unshaded, cull_disabled, depth_draw_opaque;

uniform sampler2D albedo_texture: filter_nearest, source_color;
uniform bool flash_active = false;
uniform vec4 flash_color = vec4(1.0, 1.0, 1.0, 1.0); // Flash color (white by default)

void fragment() {
    vec4 tex_color = texture(albedo_texture, UV);

    vec4 final_color = tex_color;
    if (flash_active) {
        final_color.rgb = flash_color.rgb;
        final_color.a *= flash_color.a;
    }

    ALBEDO = final_color.rgb;
    ALPHA = final_color.a;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7a3s0"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("Shader_ts40w")
shader_parameter/albedo_texture = ExtResource("1_8k6n1")
shader_parameter/flash_active = false
shader_parameter/flash_color = Vector4(1, 1, 1, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8k6n1"]
radius = 0.880144
height = 2.81295

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ts40w"]
radius = 2.28825
height = 5.23368

[sub_resource type="Animation" id="Animation_7a3s0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:material_override:shader_parameter/flash_active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6nf26"]
_data = {
&"RESET": SubResource("Animation_7a3s0")
}

[sub_resource type="Animation" id="Animation_aries"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:material_override:shader_parameter/flash_active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rvpgs"]
_data = {
&"RESET": SubResource("Animation_aries")
}

[node name="b_Dasher" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 8
script = ExtResource("1_g7xjr")
enemy_type = "Dasher"
current_health = 50.0
max_health = 50.0
stun_lockable = false
run_speed = 15.0
run_speed_variation = 2.5
steer = 0.05
distance_to_maintain_outer = 30.0
distance_to_maintain_inner = 10.0

[node name="DebugLabel" type="Label3D" parent="."]
transform = Transform3D(3.34707, 0, 0, 0, 4.72102, 0.654517, 0, -4.08702, 0.756048, 0, 5.36419, 0.718674)
visible = false
pixel_size = 0.0091
billboard = 2
texture_filter = 0
text = "CURRENT_STATE"
font = ExtResource("2_01qyd")
font_size = 47
outline_size = 0

[node name="Skin" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0.00117889, 2.10887, 0.00047031)
material_override = SubResource("ShaderMaterial_7a3s0")
modulate = Color(3, 3, 3, 1)
billboard = 2
texture_filter = 0
texture = ExtResource("1_8k6n1")
hframes = 18
vframes = 6
frame = 55

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00353384, 1.35785, 0)
shape = SubResource("CapsuleShape3D_8k6n1")

[node name="Shadow" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(20, 0, 0, 0, -1.39513, -19.9513, 0, 19.9513, -1.39513, 0, 0, 0)
pixel_size = 0.0026
texture_filter = 0
texture = ExtResource("2_c2y2a")

[node name="DamageComponent" parent="." node_paths=PackedStringArray("entity", "StateMachine") instance=ExtResource("5_ts40w")]
entity = NodePath("..")
StateMachine = NodePath("../StateMachine")
hurt_State_name = "EnemyHurt"
dead_State_name = "EnemyDead"

[node name="ContextBasedSteering" parent="." node_paths=PackedStringArray("character", "raycasts") instance=ExtResource("5_fmtxg")]
character = NodePath("..")
raycasts = NodePath("../Raycasts")
raycast_length = 7

[node name="HealthBarComponent" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("7_7a3s0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.58253, 0.0106691)
entity = NodePath("..")

[node name="Hitbox" type="Area3D" parent="."]
collision_layer = 128
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0257874, 2.03715, 0)
shape = SubResource("CapsuleShape3D_ts40w")
debug_color = Color(0.625298, 0.520639, 0.311498, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_6nf26"),
&"dasherAnims": ExtResource("3_4x4fv")
}

[node name="Fx" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rvpgs"),
&"enemyFxAnims": ExtResource("7_ps5yx")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "main_node")]
unique_name_in_owner = true
script = ExtResource("4_8jybf")
initial_state = NodePath("EnemyIdle")
main_node = NodePath("..")

[node name="EnemyIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_g7xjr")
enemy = NodePath("../..")

[node name="EnemyChase" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "CBS")]
script = ExtResource("8_lwrc5")
enemy = NodePath("../..")
CBS = NodePath("../../ContextBasedSteering")

[node name="EnemyHold" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "CBS")]
script = ExtResource("15_aries")
enemy = NodePath("../..")
CBS = NodePath("../../ContextBasedSteering")

[node name="AttackTimer" type="Timer" parent="StateMachine/EnemyHold"]

[node name="EnemyHurt" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("10_6clr8")
enemy = NodePath("../..")

[node name="EnemyDead" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("14_6nf26")
enemy = NodePath("../..")

[node name="Raycasts" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.815084, 0)

[node name="0" type="RayCast3D" parent="Raycasts"]
collision_mask = 9

[node name="1" type="RayCast3D" parent="Raycasts"]
collision_mask = 9

[node name="2" type="RayCast3D" parent="Raycasts"]
collision_mask = 9

[node name="3" type="RayCast3D" parent="Raycasts"]
collision_mask = 9

[node name="4" type="RayCast3D" parent="Raycasts"]
collision_mask = 9

[node name="5" type="RayCast3D" parent="Raycasts"]
collision_mask = 9

[node name="6" type="RayCast3D" parent="Raycasts"]
collision_mask = 9

[node name="7" type="RayCast3D" parent="Raycasts"]
collision_mask = 9

[connection signal="timeout" from="StateMachine/EnemyHold/AttackTimer" to="StateMachine/EnemyHold" method="_on_attack_timer_timeout"]
